--- a/vc8_0/RatDVDReader.vcproj
+++ b/vc8_0/RatDVDReader.vcproj
@@ -75,6 +75,7 @@
 				RegisterOutput="true"
 				AdditionalDependencies="unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)$(ProjectName).dll"
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\RatDVDPlugin\$(ProjectName).def&quot;"
 				GenerateDebugInformation="true"
@@ -162,6 +163,7 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				OutputFile="$(OutDir)$(ProjectName).dll"
+				GenerateManifest="false"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\RatDVDPlugin\$(ProjectName).def&quot;"
 				GenerateDebugInformation="true"
 				BaseAddress="0x25000000"
