Conformed resources of plug-ins.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6301 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/PluginWizard/Shareaza Image Service Plugin (Visual Studio 2003, ATL)/#PROJECT#.rc
+++ b/PluginWizard/Shareaza Image Service Plugin (Visual Studio 2003, ATL)/#PROJECT#.rc
@@ -43,9 +43,11 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
+			VALUE "Comments", "#PROJECTNAME#"
+			VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "#PROJECTNAME#"
             VALUE "FileVersion", "1, 0, 0, 1"
-            VALUE "InternalName", "#PROJECT#.dll"
+            VALUE "InternalName", "#PROJECT#"
             VALUE "LegalCopyright", "#COPYRIGHT#"
             VALUE "OriginalFilename", "#PROJECT#.dll"
             VALUE "ProductName", "Shareaza P2P"
